--- a/views/configure.jade
+++ b/views/configure.jade
@@ -2,8 +2,14 @@ extends layout
 
 block content
     h3 Flocknet Configuration
-    .form-group
-        label(for="sel1") Select Group
-        select.form-control#sel1
-            for item in data
-                option(id="#{item.id}") #{item.name}
+
+    .container
+        form
+            .form-group
+                label(for="sel1") Select Group
+                select.form-control#sel1
+                    for item in data
+                        option(id="#{item.id}") #{item.name}
+            .form-group.row
+                .col-sm-10
+                    button.btn.btn-primary(type='submit') Submit
