--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,4 +10,5 @@ html
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js")
+        script(src="/javascripts/configure.js")
 
