--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,4 +11,6 @@ html
         script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js")
         script(src="/javascripts/configure.js")
+        script(src="/javascripts/bootstrap3-typeahead.min.js")
+
 
