show alert for outgoing webhook

--- a/views/configure.jade
+++ b/views/configure.jade
@@ -28,5 +28,7 @@ block content
                 .col-sm-10
                     button.btn.btn-primary Submit
 
+            .alert.alert-success(role="alert")#message
+
     script.
         userId = "#{userId}"
