Add tutorial for adding incoming webhook

--- a/views/configure.jade
+++ b/views/configure.jade
@@ -22,6 +22,8 @@ block content
                 .col-sm-10
                     label(for="inputIWebhook") Enter Incoming Webhook Url
                 .col-sm-10
+                    img(src="/images/incoming_webhook.gif", style="padding-bottom:20px")
+                .col-sm-10
                     input#inputIWebhook.form-control(type='url', placeholder='Incoming Webhook Url')
 
             .form-group.row
