Hide alert by default

--- a/views/configure.jade
+++ b/views/configure.jade
@@ -28,7 +28,7 @@ block content
                 .col-sm-10
                     button.btn.btn-primary Submit
 
-            .alert.alert-success(role="alert")#message
+            .alert.alert-success(role="alert", style="display:none")#message
 
     script.
         userId = "#{userId}"
