--- a/views/list.jade
+++ b/views/list.jade
@@ -1,9 +1,21 @@
-extends layout
+doctype html
+html
+    head
+        title= title
+        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous")
 
-block content
-    h6.col-xs-10 Available Public Groups
-    ul.list-group
-        for item in data
-            li.list-group-item.col-xs-10
-                span.tag.tag-default.tag-pill.float-xs-right #{item.count}
-                | #{item.name}
+    body
+        h6.col-xs-10 Available Public Groups
+            ul.list-group#channels
+                for item in data
+                    li.list-group-item.col-xs-10
+                        span.tag.tag-default.tag-pill.float-xs-right #{item.count}
+                        | #{item.name}
+
+        script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js")
+        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js")
+        script(src="/javascripts/list.js")
+        script(src="/javascripts/bootstrap3-typeahead.min.js")
+
