--- a/views/list.jade
+++ b/views/list.jade
@@ -9,10 +9,11 @@ html
         h6.col-xs-10 Available Public Groups
             ul.list-group#channels
                 for item in data
-                    li.list-group-item.col-xs-10
+                    li.list-group-item.col-xs-10(id="#{item.name}")
                         span.tag.tag-default.tag-pill.float-xs-right #{item.count}
                         | #{item.name}
-
+        script.
+            v_token = "#{v_token}"                
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js")
