--- a/views/list.jade
+++ b/views/list.jade
@@ -6,10 +6,12 @@ html
         link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous")
 
     body
-        h6.col-xs-10 Available Public Groups
+        h6 
+            b Available Public Groups
+        h6
             ul.list-group#channels
                 for item in data
-                    li.list-group-item.col-xs-10(id="#{item.name}")
+                    li.list-group-item(id="#{item.name}")
                         span.tag.tag-default.tag-pill.float-xs-right #{item.count}
                         | #{item.name}
         script.
